--- a/week0/PS0/search/index.html
+++ b/week0/PS0/search/index.html
@@ -1,12 +1,21 @@
+<!--https://www.w3schools.com/css/css_positioning.asp-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width" initial-scale-1.0>
         <title>Search</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="middle.css">
     </head>
     <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="fixedContainer">
+            <form action="https://google.com/search">
+                <input class="form-control" type="text" name="q">
+                <input id="searchBox" type="submit" value="Google Search">
+            </form>
+        </div>
+        <a href="imageSearch.html">Google Images</a>
+        <a href="advancedSearch.html">Advanced Search</a>
     </body>
 </html>
