image search works now

--- a/week0/PS0/search/imageSearch.html
+++ b/week0/PS0/search/imageSearch.html
@@ -1,3 +1,5 @@
+<!--https://stenevang.wordpress.com/2013/02/22/google-advanced-power-search-url-request-parameters/-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,8 +10,9 @@
     </head>
     <body>
         <div id="fixedContainer">
-            <form action="https://www.google.com/imghp">
+            <form action="https://www.google.com/search">
                 <input id="searchBox" class="form-control" type="text" name="q">
+                <input type="hidden" name="tbm" value="isch">
                 <input id="searchButton" type="submit" value="Google Image Search">
             </form>
         </div>
