added some more stuff

--- a/week0/PS0/search/index.html
+++ b/week0/PS0/search/index.html
@@ -16,7 +16,7 @@
             </form>
         </div>
         <div>
-            <a id="linkAbove" href="imageSearch.html">Google Images</a>
+            <a id="linkAbove" href="imageSearch.html">Google Image Search</a>
             <a id="linkUnderneath" href="advancedSearch.html">Advanced Search</a>
         </div>
     </body>
