--- a/week5/notes/counter.html
+++ b/week5/notes/counter.html
@@ -2,20 +2,7 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
-        <script>
-
-            let counter = 0;
-            function count(){
-                document.querySelector('h1').innerHTML = ++counter
-                if (counter % 10 === 0){
-                    alert(`counter is now ${counter}!`)
-                }
-            }
-            document.addEventListener('DOMContentLoaded', function(){
-                document.querySelector('button').onclick = count;
-            })
-
-        </script>
+        <script src="counter.js"></script>
     </head>
     </head>
     <body>
